--- a/RPG/src/components/tarefas/tarefasConcluidas/tarefasConcluidas.css
+++ b/RPG/src/components/tarefas/tarefasConcluidas/tarefasConcluidas.css
@@ -1,5 +1,3 @@
-/* tarefasConcluidas.css */
-
 .container-tarefas {
   margin: 0;
   margin-left: 15px;
@@ -119,11 +117,6 @@
   line-height: 1.4;
 }
 
-.tarefa-concluida-vertical:hover {
-  transform: scale(1.01);
-  box-shadow: 0 12px 15px rgba(0, 0, 0, 0.3);
-}
-
 /* Seção de Tarefas Concluídas */
 .secao-tarefas-concluidas {
   background: rgba(255, 255, 255, 0.25);
@@ -188,6 +181,10 @@
   color: white;
 }
 
+.tarefa-titulo {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
 .conteudo-concluida {
   max-height: 0;
   overflow: hidden;
@@ -215,35 +212,34 @@
 .sem-tarefas-concluidas .icone-vazio {
   font-size: 3.5rem;
   margin-bottom: 20px;
-  opacity: 0.3;
+  opacity: 0.7;
 }
 
 .sem-tarefas-concluidas h3 {
-  color: #555;
+  color: white;
   margin-bottom: 10px;
   font-size: 1.3rem;
 }
 
 .sem-tarefas-concluidas p {
-  color: #777;
+  color: white;
   margin-bottom: 25px;
   line-height: 1.5;
 }
 
 .btn-explorar {
-  background: linear-gradient(135deg, #4DC48A 0%, #2f7854 100%);
-  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
   border: none;
-  padding: 10px 25px;
-  border-radius: 6px;
-  font-size: 1rem;
-  font-weight: 500;
+  background-color: #2f7854;
+  color: white;
+  font-weight: bold;
   cursor: pointer;
-  transition: transform 0.2s;
+  transition: all 0.3s ease;
 }
 
 .btn-explorar:hover {
-  transform: translateY(-2px);
+  transform: scale(1.05);
 }
 
 /* Loading */
